force-app/main/default/objects/tc9_imp__Timesheet_Import__c/tc9_imp__Timesheet_Import__c.object-meta.xml
<CustomObject>
    <label>Imported Record</label>
    <nameField>
        <label>Imported Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imported Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>