force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Allow_Duplicate_File_Import__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Allow_Duplicate_File_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a user has allowed a potentially duplicate file to be imported.</description>
    <inlineHelpText>Indicates that a user has allowed a potentially duplicate file to be imported.</inlineHelpText>
    <label>Allow Duplicate File Import</label>
    <type>Checkbox</type>
</CustomField>