force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Duplicate_File_Detected__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Duplicate_File_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this field indicates that a file with the same filename was previously imported.</description>
    <inlineHelpText>When checked, this field indicates that a file with the same filename was previously imported.</inlineHelpText>
    <label>Duplicate File Detected</label>
    <type>Checkbox</type>
</CustomField>