force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Error_Summary__c</fullName>
    <label>Error Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>