force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Import_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Import_Type__c</fullName>
    <label>Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>