force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>