force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Override_Pay_Multipliers__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Override_Pay_Multipliers__c</fullName>
    <description>Indicates whether pay rate multipliers will be overridden to 1 during Pay Transaction Import</description>
    <inlineHelpText>Indicates whether pay rate multipliers will be overridden to 1 during Pay Transaction Import</inlineHelpText>
    <label>Override Pay Multipliers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>