force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Override_Standard_Import_Process__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Override_Standard_Import_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, an alternative external process imports the attached file data.</description>
    <inlineHelpText>If true, an alternative external process imports the attached file data.</inlineHelpText>
    <label>Override Standard Import Process</label>
    <type>Checkbox</type>
</CustomField>