force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Records_Attempted__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Records_Attempted__c</fullName>
    <label>Records Attempted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>