force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Validation Errors</fullName>
            </value>
            <value>
                <fullName>Validation Errors Exist</fullName>
            </value>
            <value>
                <fullName>Ready To Be Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Import In Progress</fullName>
            </value>
            <value>
                <fullName>Processed Successfully</fullName>
            </value>
            <value>
                <fullName>Processed With Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>