force-app/main/default/objects/tc9_imp__Timesheet_Import__c/fields/tc9_imp__Successful_Records__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Successful_Records__c</fullName>
    <label>Successful Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>