force-app/main/default/objects/tc9_imp__Timesheet_Import__c/recordTypes/tc9_imp__Allowance.recordType-meta.xml
<RecordType>
    <fullName>tc9_imp__Allowance</fullName>
    <active>true</active>
    <label>Allowance</label>
</RecordType>