force-app/main/default/objects/tc9_imp__Timesheet_Import__c/recordTypes/tc9_imp__Assignment.recordType-meta.xml
<RecordType>
    <fullName>tc9_imp__Assignment</fullName>
    <active>true</active>
    <label>Assignment</label>
</RecordType>