force-app/main/default/objects/tc9_imp__Timesheet_Import__c/recordTypes/tc9_imp__Paytransaction.recordType-meta.xml
<RecordType>
    <fullName>tc9_imp__Paytransaction</fullName>
    <active>true</active>
    <label>Pay Transaction</label>
</RecordType>