force-app/main/default/objects/tc9_imp__Timesheet_Import__c/recordTypes/tc9_imp__Timesheet.recordType-meta.xml
<RecordType>
    <fullName>tc9_imp__Timesheet</fullName>
    <active>true</active>
    <label>Timesheet</label>
</RecordType>