force-app/main/default/objects/tc9_imp__Timesheet_Import__c/listViews/tc9_imp__New.listView-meta.xml
<ListView>
    <fullName>tc9_imp__New</fullName>
    <columns>NAME</columns>
    <columns>tc9_imp__Status__c</columns>
    <columns>tc9_imp__Records_Attempted__c</columns>
    <columns>tc9_imp__Successful_Records__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_imp__Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New</label>
</ListView>