force-app/main/default/objects/tc9_imp__Timesheet_Import__c/listViews/tc9_imp__Timesheets.listView-meta.xml
<ListView>
    <fullName>tc9_imp__Timesheets</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_imp__Import_Status__c</columns>
    <columns>tc9_imp__Records_Attempted__c</columns>
    <columns>tc9_imp__Successful_Records__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_imp__Timesheet_Import__c.tc9_imp__Timesheet</value>
    </filters>
    <label>Timesheets</label>
</ListView>